version-0.1.1

SIGNIFICANT USER-VISIBLE CHANGES

  - The design file is now optional

BUG FIXES


*********************************
version-0.1.0

NEW FEATURES

  - First version of the vegan pipeline
