@@ -1,2 +1,2 @@
 analysis_type	Epigenomics
-biological_application	ChIP-seq
+biological_application	DNA-seq
