@@ -19,6 +19,7 @@ params {
 
   // Input data - Sample Plan
   samplePlan = "$baseDir/test/csv/hpc-bench-wgs-13x.csv"
+  //samplePlan = "$baseDir/test/csv/hpc-bench-wgs-13x_ubam.csv"
   //design = "$baseDir/test/csv/hpc-bench-wgs-13x-design.csv"
 
   // Annotations
